# libsquishy

./: meson.build  meson_options.txt
src/: checksum.c  checksum.h  error.c  error.h  meson.build  squishy-version.h.in  squishy.c  squishy.h
